2007-05-16  Neil Shi  <zeegeek@gmail.com>

	* popprl.py (pop.get_mail): Correctly decodes into unicode.

	* imapprl.py (imap.get_mail.b): Correctly decodes into unicode.

	* feedprl.py (feed.get_mail): Improved encoding handling.

2007-05-15  Neil Shi  <zeegeek@gmail.com>

	* gui.py (gui.__settings_save): It now saves settings to the
	config file right away.

	* imapprl.py (imap.get_mail.b): Changed regex for detecting new
	messages.
	(imap.get_mail): Now it only fetches all the new messages unless
	the window is big enough to hold more messages.

2007-05-12  Neil Shi  <zeegeek@gmail.com>

	* gui.py (gui.__auth_toggled): Disable username and password entry
	when authentication is unselected.

	* config.py (config.write): Sets config file permissions to 0600.

	* pymailheaders.py (main): Correctly handles unset variables.

	* feedprl.py (feed.get_mail.a): Displays sender's name only if there
	is one.  Otherwise display the email address.

2007-05-11  Neil Shi  <zeegeek@gmail.com>

	* imapprl.py (imap.get_mail): Displays sender's name only if there
	is one.  Otherwise display the email address.

	* popprl.py (pop.get_mail): Displays sender's name only if there
	is one.  Otherwise display the email address.

2007-04-24  Neil Shi  <zeegeek@gmail.com>

	* gui.py (gui.__position_changed): Now it remembers position on
	quit correctly.

2007-04-20  Neil Shi  <zeegeek@gmail.com>

	* pymailheaders.py (main): Now it fetches all messages and pass
	them to the GUI.

	* config.py (config): Added settings for GTK+.

	* gui.py (gui): Changed GUI to GTK+.
	(gui): Added settings and about dialog.

2007-04-12  Neil Shi  <zeegeek@gmail.com>

	* config.py (config): Added configuration file support.

2007-03-31  Neil Shi  <zeegeek@gmail.com>

	* imapprl.py (imap.get_mail): Fixed the bug of highlighting wrong
	messages if the new messages are not at the top.  Use a new data
	structure to store message entries.

2007-03-14  Neil Shi  <zeegeek@gmail.com>
