@@ -1,3 +1,9 @@
+2007-05-17  Neil Shi  <zeegeek@gmail.com>
+
+	* imapprl.py (imap.get_mail.d): Fixed mime headers decoding bug.
+
+	* popprl.py (pop.get_mail.d): Fixed mime headers decoding bug.
+
 2007-05-16  Neil Shi  <zeegeek@gmail.com>
 
 	* popprl.py (pop.get_mail): Correctly decodes into unicode.
